# rust_learning

./: .gitignore  README.md
Course_files/: creando_threads.rs  enums.rs  sitios.txt  vscode-ejemplo-launch.json
Course_files/twitter-clone/: .env  Cargo.toml
Course_files/twitter-clone/src/: likes.rs  main.rs  tweets.rs
coding_exercises/twitter-api/: .env  Cargo.toml
coding_exercises/twitter-api/docker/: docker-compose.yml
coding_exercises/twitter-api/docker/postgres/: postmaster.pid
coding_exercises/twitter-api/docker/postgres/base/13823/: pg_internal.init
coding_exercises/twitter-api/docker/postgres/base/16384/: 1247  1249  1255  1255_vm  1259  16385  16389  16398  16399  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2699  2701  2702  2703  2704  3455  pg_internal.init
coding_exercises/twitter-api/docker/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
coding_exercises/twitter-api/docker/postgres/pg_stat/: db_0.stat  db_16384.stat  global.stat
coding_exercises/twitter-api/docker/postgres/pg_stat_tmp/: db_0.stat  db_13823.stat  db_16384.stat  global.stat
coding_exercises/twitter-api/migrations/2024-03-10-121524_create_tweets/: up.sql
coding_exercises/twitter-api/migrations/2024-03-10-121804_create_likes/: up.sql
coding_exercises/twitter-api/src/: likes.rs  main.rs  tweets.rs
playaround/: Cargo.toml  increments.txt
playground/: Cargo.toml
theory/: data_types.txt  enums.txt  functions.txt  informacion_rust.txt  option_enum.txt  (+2 more)
(+30 files in other folders)
