[package]
name = "twitter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
uuid ={ version = "1.7.0", features = ["v4", "serde"] }
chrono ={ version = "0.4.19", features = ["serde"] }
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.57"

[[bin]]
name = "twitter-api"
path = "src/main.rs"